# Study_helper

./: .gitignore  README.MD  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/routes/: chat.py  documents.py
app/core/: config.py
app/models/: chunk.py  document.py
app/schemas/: chat.py  documents.py
app/services/: chat_service.py  document_service.py  embedding_service.py  llm_service.py  storage_service.py  text_extraction_service.py  text_processing_service.py  vector_store.py
