[project]
name = "study-helper"
version = "0.1.0"
description = "Document-based study assistant backend."
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic-settings==2.7.1",
    "pypdf==5.1.0",
]

[tool.uv]
package = false
